--- a/yeeun/myapp/package.json
+++ b/yeeun/myapp/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
